--- a/documentation/classes/SendLogRequestDto.html
+++ b/documentation/classes/SendLogRequestDto.html
@@ -89,6 +89,9 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
+                                <a href="#key" >key</a>
+                            </li>
+                            <li>
                                 <a href="#functionName" >functionName</a>
                             </li>
                             <li>
@@ -117,6 +120,41 @@
     <h3 id="inputs">
         Properties
     </h3>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="key"></a>
+                    <span class="name">
+                        <span ><b>key</b></span>
+                        <a href="#key"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <b>Decorators : </b>
+                        <br />
+                        <code>
+                            @IsString()<br />
+                        </code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="6" class="link-to-prism">src/features/kafka-producer/dtos/send-log-request.dto.ts:6</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
     <table class="table table-sm table-bordered">
         <tbody>
             <tr>
@@ -257,8 +295,12 @@
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { LogDto } from &#x27;@features/kafka-producer/dtos/log.dto&#x27;;
+import { IsString } from &#x27;class-validator&#x27;;
 
-export class SendLogRequestDto extends LogDto {}
+export class SendLogRequestDto extends LogDto {
+    @IsString()
+    key: string;
+}
 </code></pre>
     </div>
 </div>
